src/client/container/GeneralChatPage/GeneralChatMainPage.css
.marginBottom {
	margin-bottom: 5px;
}

.marginTop {
	margin-top: 5px;
}

.GeneralChatMainWrapper {
	display: grid;
	position: fixed;
	grid-template-columns: repeat(12,1fr);
	grid-gap: 0.1em;
	border-width: 0.1px;
	border-style: solid hidden;
	margin-top: 2px;
	border-color: #adb5bd;
	height: var(--chatMainHeight);
	width: 50%;
	bottom: 0px;
}

section > .GeneralChatMainWrapper:hover {
	height: 80vh;
}

.GeneralChatMainWrapper > div {
	padding: 0.2em;
}

.GeneralChatMainWrapper > div:nth-child(odd){
}

.MessageLeftPanel {
	grid-column: var(--leftPanelColumn);
	display: flex;
	flex-flow: column;
	height: inherit;
	border-style: solid;
	border-color: #adb5bd;
	border-width: thin;
	background-color: white;
	margin: none;
}

.MessageRightPanel {
	grid-column: var(--rightPanelColumn);
	display: flex;
	flex-flow: column;
	height: inherit;
	border-width: thin;
	background-color: white;
	border-style: solid;
	border-color: #adb5bd;
	border-width: thin;
}

.MessageHeader_ls{
	height: 40px;
	border-bottom-style: solid;
	border-color: inherit;
	border-width: thin;
	padding-top:2px;
	padding-bottom:2px;

	display: flex;
	justify-content: space-between;
}	

.MessageHeaderLabel {
	font-size: 1.1em;
	font-weight: bold;
}


.SearchMessageBox{
	height: 40px;
	padding-top:2px;
	padding-bottom:2px;
	border-bottom-style: solid;
	border-color: inherit;
	border-width: thin;

	display: flex;
}

.searchIcon {
	margin-right: 10px;
	color: #adb5bd;
	margin-top: 8px;
	margin-left: 8px;
}

.searchLabel {
	margin-top: 5px;

}

.SenderProfileSummary{
	height: 40px;
	border-bottom-style: solid;
	border-color: inherit;
	border-width: thin;
	padding-top:2px;
	padding-bottom:2px;
	display: flex;
	flex-direction: row;
}

.ChattingWindow{
	flex-grow: 1;
	overflow-y: scroll;
	padding-top:2px;
	padding-bottom:2px;
	border-bottom-style: solid;
	border-color: inherit;
	border-width: thin;
}

.WriteMessageWindow{
	height: 50px;
	display: flex;
	margin-bottom:15px;
}


.WriteMessageBox{
	margin-left: 5px;
	width: 90%;
	padding: 2px 5px;
	max-height: 45px;
}

.speech-bubble-right {
	position: relative;
	background: #dee2e6;
	border-radius: .4em;
	border-color: inherit;
	width: 93%;
	min-height: 50px;
	float: right;
	text-align: left;
	padding: 0px 10px 10px 10px;
}


.speech-bubble-left {
	position: relative;
	background: #cdd6e0;
	border-radius: .4em;
	width: 93%;
	min-height: 50px;
	float: right;
	text-align: left;
	padding: 0px 10px 10px 10px;
}


.MessageTimeStamp {
	position: absolute;
	bottom: 5px;
	right:30px;
	color: #8B0000 !important;
	font-size: 75%;
}

.MessageTimeStampLeft {
	position: absolute;
	bottom: 5px;
	left:30px;
	color: #8B0000 !important;
	font-size: 75%;
}

.ChattingMessageStyle {
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}

.MessageContents {
	color: rgb(72, 72, 72) !important;
	padding-top: 5px;
	padding-left: 5px;
	padding-right: 5px;
	word-wrap: break-word;
	max-width: 450px;
}

.MessageContactList{
	overflow-y: scroll;
	flex-grow: 1;
	padding-top: 2px;
	margin-left: -3px;
}

.ProfilePicture {
	grid-area: pp;
	padding-left: 2px;
	width: 100%;
}

.ProfilePictureInMessageBox {
	width: 100%;
	margin-top: 10%;
}

.ContactName {
	grid-area: cn;
	padding-left: 10px;

}

.ChatSummary {
	grid-area: cs;
	font-style: italic;
	padding-left: 10px;
	padding-top: 10px;
}

.ChatTimeStamp {
	grid-area: ts;
	padding-top: 10px;
	color: #8B0000 !important;
	font-size: 75%;
	justify-self: end;
}

.ContactSummary {
	display: grid;
	grid-template-columns: repeat(4, 1fr);
	height:minmax(100px, 200px);
	padding-top: 2px;
	grid-template-areas:
	" pp cn cn cn"
	" pp . . . "
	" cs cs cs cs"
	" cs cs cs cs"
	" . ts ts ts";
}

.ContactSummaryClicked {
	display: grid;
	grid-template-columns: repeat(4, 1fr);
	height:minmax(100px, 200px);

	background-color: #b0becc;
	border-left-style: solid;
	border-left-color: #115399;
	border-left-width: 5px;

	padding-top: 2px;

	grid-template-areas:
	" pp cn cn cn"
	" pp . . . "
	" cs cs cs cs"
	" cs cs cs cs"
	" . ts ts ts";
}

.GroupContactSummary {
	display: grid;
	grid-template-columns: repeat(4, 1fr);
	height:minmax(100px, 200px);
	padding-top: 2px;
	grid-template-areas:
	" pp pp pp pp"
	" pp pp pp pp "
	" cs cs cs cs"
	" cs cs cs cs"
	" . ts ts ts";
}

.GroupContactSummaryClicked {
	display: grid;
	grid-template-columns: repeat(4, 1fr);
	height:minmax(100px, 200px);

	background-color: #b0becc;
	border-left-style: solid;
	border-left-color: #115399;
	border-left-width: 5px;

	padding-top: 2px;

	grid-template-areas:
	" pp pp pp pp"
	" pp pp pp pp "
	" cs cs cs cs"
	" cs cs cs cs"
	" . ts ts ts";
}

.NewMessageIndicator {
    border-left-style: solid !important;
    border-left-color: #dc3545 !important;
    border-left-width: 5px !important;
}

.imgFitToGrid {
	object-fit: cover !important;
	width: 100% !important;
}

.imgInMsgBox {
	object-fit: cover !important;
	width: 40px;
}

.imgLeftMsgBox {
	object-fit: cover !important;
	width: 65px;
	margin: 20px;
	margin-left: 83%;
	margin-bottom: 15px;
}

.imgRightMsgBox {
	object-fit: cover !important;
	width: 65px;
	margin: 20px;
	margin-left: -20px;
	margin-bottom: 15px;
}

.AlignToLeft {
	padding-left: 20% !important;
	margin-right: 0% !important;
}

.AlignToRight {
	padding-left: 5% !important;
}

.ChattingMessageBoxWrapper {
	display: grid;
	grid-template-columns: 1fr 11fr;
}

.ChattingMessageBoxWrapperNoPicture {
	display: grid;
	grid-template-columns: 1fr 8fr;
}

.ChatPartyName {
	color: black;
	margin-left: 5px;
}

.SocialDistance {
	color: rgb(72, 72, 72) !important;
	font-size: small;
	padding-top:3px;
	padding-left:5px;
}


.FileAttachIcon {
	height: 24px; 
	width: 24px; 
	display: block; 
	fill: currentcolor;
	margin-top: 10px;
	color: #a52a2a;
}

#ChattingMessage {
	width: 100%;
	white-space: pre-wrap;
	border-style: solid !important;
	border-color: #adb5bd;
	border-width: thin;
	resize: none;
	height: 45px;
	margin-top:8px;
}

#ChattingMessage:focus {
	border-style: solid !important;
	border-color: gray;
	border-width: 0.1rem;
}

.newMessage {
	border-top: 1px solid red;
}

.newMessage:after {
	content: 'New';
	color: red;
}

